package sys;

option java_package = "nirvana.hall.protocol.sys";

option java_outer_classname = "CommonProto";

message BaseRequest{
  extensions 100 to max;
  required string token = 1;
  required int32 version = 2 [default = 10100];
  /**
  101   LoginRequest
  110   SyncDictResponse
  111   DictListRequest
  9001  TPCardAddRequest
  9002  LPCardAddRequest
  9003  CaseAddRequest
  9004  CaseDelRequest
  9005  CaseGetRequest
  9006  CaseUpdateRequest
  9007  LPCardDelRequest
  9008  LPCardGetRequest
  9009  LPCardUpdateRequest
  9010  TPCardDelRequest
  9011  TPCardUpdateRequest
  9012  TPCardGetRequest
  9013  QuerySendRequest
  9014  QueryGetRequest
  **/
}
//服务器返回状态
enum ResponseStatus {
  OK = 1;
  FAIL = 2;
}
message BaseResponse{
  extensions 100 to max;
  required ResponseStatus status = 1;
  optional string message = 2;
  /**
  101 LoginResponse
  110   SyncDictResponse
  111   DictListResponse
  9001  TPCardAddResponse
  9002  LPCardAddResponse
  9003  CaseAddResponse
  9004  CaseDelResponse
  9005  CaseGetResponse
  9006  CaseUpdateResponse
  9007  LPCardDelResponse
  9008  LPCardGetResponse
  9009  LPCardUpdateResponse
  9010  TPCardDelResponse
  9011  TPCardUpdateResponse
  9012  TPCardGetResponse
  9013  QuerySendResponse
  9014  QueryGetResponse
  */
}
message KV {
  required string key = 1;
  optional string value = 2;
}
message KVObject{
  repeated KV object = 1;
}
